--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,6 +13,8 @@
         }
         .button:hover {background: #0056b3;}
     </style>
+
+    <h1> Landing Page</h1>
 </head>
 <body>
 <div class="container">
